tests/NormalTests/paczka2/big_fuzzy/74733092.err
Error in line 6: 6QvfâS A341 171,3
Error in line 5: 6QvfgS A341 91,6
Error in line 14: 6QvfgS A237 34,1
Error in line 28: 6QvfgS A341 91,0
Error in line 36: 7sERh/ S300 5,6
Error in line 17: 7sERhj A237 16,8
Error in line 47: 6QvfgS A341 94,4
Error in line 50: 6QvfgS A341 97,0
Error in line 39: mNR0Ct A341 104,0
Error in line 53: BjTDp S300 68,3
Error in line 72: mNR0Ct A4+5 66,3
Error in line 75: 6QvfgS S300 48,5
Error in line 65: mNR0Ct A485 28,7
Error in line 80: A485 S300 -2,6
Error in line 44: 7sERhj S300 27,9
Error in line 81: 7sERhj A485 69,7
Error in line 87: BjTDp A237 50,0
Error in line 95: A485 A237 5,2
Error in line 97: A485 S300 82,3
Error in line 101: ow6R A341 0,1
Error in line 103: ow6R S300 61,8
Error in line 106: HSNi A341 53,9
Error in line 117: HSNi A485 52,7
Error in line 120: 7sERhj A237 98,4
Error in line 125: HSNi S300 -2,5
Error in line 122: 6QvfgS A485 45,8
Error in line 129: 6QvfgS S300 36,5
Error in line 130: 6QvfgS A341 0,4
Error in line 127: A485 A485 12,7
Error in line 132: 6QvfgS A237 97,2
Error in line 139: BjTDp S300 36,9
Error in line 142: BjTDp A237 6,9
Error in line 145: 7sERhj A341 27,5
Error in line 147: 7sERhj Av85 1,8
Error in line 143: BjTDp A485 79,8
Error in line 150: 6QvfgS A485 2,8
Error in line 118: HSNi S300 72,6
Error in line 153: HSNi A485 5,9
Error in line 146: 7sERhj A485 68,1
Error in line 151: 6QvfgS S300 14,0
Error in line 148: BjTDp A341 623,2
Error in line 155: 7sERhj S300 30,9
Error in line 171: 7sERhj A485 88,9
Error in line 174: 7sERhj A341 16,5
Error in line 180: 7sERhj A237 52,9
Error in line 135: ow6R A237 40,8
Error in line 175: 6QvfgS A485 47,9
Error in line 185: ow6R A341 98,5
Error in line 176: BjTDp A341 43,6
Error in line 199: mNR0Ct A341 -1,1
Error in line 195: mNR0Ct A341 92,7
Error in line 196: 7sERhj A237 37,4
Error in line 210: A485 A341 78,3
Error in line 189: 6QvfgS A237 205,3
Error in line 217: ow6R A485 73,3
Error in line 212: A485 A237 49,0
Error in line 224: 6QvfgS A237 56,0
Error in line 222: A485 A341 60,4
Error in line 219: ow6R S300 87,5
Error in line 244: 6QvfgS S300 35,8
